--- a/stylesheets/scss/_header.scss
+++ b/stylesheets/scss/_header.scss
@@ -69,6 +69,7 @@
     }
 
     .header-right {
+      max-width: 100%;
       text-align: right;
       margin-left: 15px;
 
