--- a/stylesheets/scss/_menus.scss
+++ b/stylesheets/scss/_menus.scss
@@ -95,6 +95,7 @@
 }
 
 .menu-main {
+  @include hyphenate(true);
   display: inline-block;
   vertical-align: middle;
 
